# kalinov-bridge

./: .gitignore  .mcp_smoke_check.feature  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
adr/: 0001b-cnl-agnostic-step-body.md  0004-prover-abc-frozen.md  0005-lean-toolchain.md  0006-llm-abc-frozen.md  README.md
corpus/: README.md
docs/: README.md  development.md  mcp.md
evals/: README.md
evals/suites/: lean_basic.yaml  smoke.yaml
evals/tasks/: forthel_demo.feature  forthel_to_lean.feature  gauss_sum.feature  pythagoras.feature
examples/: am_gm_inequality.feature  elastic_collision.feature  gauss_sum.feature  triangle_inequality.feature
experiments/: README.md  cross_model_smoke.yaml  hello_e2e.py  lean_basic_local.yaml
lean/: KalinovBridge.lean  README.md  lake-manifest.json  lakefile.toml
lean/KalinovBridge/: Basic.lean  Scratch.lean
provers/lean/runtime/: README.md  lake-manifest.json  lakefile.toml
provers/lean/runtime/KalinovBridge/: Basic.lean
scripts/: mcp_smoke.py
src/kalinov/: __init__.py  cli.py  cli_core.py  mcp_cli.py
src/kalinov/bridges/: __init__.py  forthel_lean.py
src/kalinov/cost/: __init__.py  calculator.py  catalogue.py  models.py  pricing.yaml
src/kalinov/eval/: __init__.py  cli_impl.py  compare.py  experiment.py  matrix.py  metrics.py  report.py  runner.py  suite.py
src/kalinov/gherkin/: __init__.py  ast.py  errors.py  parser.py
src/kalinov/interpreters/: __init__.py  base.py  forthel.py  mathtex.py  raw.py
src/kalinov/llm/: __init__.py  base.py  budget.py  budget_context.py  cache.py  config.py  factory.py  pipeline.py  retrying.py  run_report.py  telemetry.py
src/kalinov/llm/providers/: __init__.py  anthropic_client.py  gemini_client.py  openai_client.py  openai_compat_client.py
src/kalinov/mcp/: __init__.py  resources.py  runtime.py  schemas.py  server.py  tools.py
src/kalinov/mining/: __init__.py  emit.py  errors.py  pipeline.py
src/kalinov/mining/extractors/: __init__.py  base.py  heuristic.py
src/kalinov/mining/sources/: __init__.py  arxiv.py  base.py
src/kalinov/oracle/: __init__.py  loop.py  prompts.py  strategy.py  telemetry.py  transcript.py
src/kalinov/provers/: __init__.py  base.py  errors.py  null.py  telemetry.py
src/kalinov/provers/lean/: __init__.py  adapter.py  error_parser.py  runtime.py  toolchain.py
src/kalinov/telemetry/: __init__.py  context.py  jsonl.py
src/kalinov_bridge/: __init__.py  cli.py  lean_build.py  mock_llm.py  pipeline.py  repo.py
tests/: __init__.py  conftest.py  test_cli_check.py  test_cli_check_forthel.py  test_cli_cost_report.py  test_cli_eval.py  test_cli_mcp.py  test_cli_mine.py  test_cli_solve.py  test_cost_catalogue.py  test_eval_compare.py  test_eval_experiment.py  test_eval_matrix.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_eval_suite.py  test_forthel_interpreter.py  test_forthel_lean_bridge.py  test_gherkin_parser.py  test_lean_adapter.py  test_lean_error_parser.py  test_lean_toolchain.py  test_llm_anthropic.py  test_llm_budget.py  test_llm_budget_enforcement.py  test_llm_cache.py  test_llm_cache_pipeline.py  test_llm_config.py  test_llm_factory.py  test_llm_gemini.py  test_llm_openai.py  test_llm_openai_compat.py  test_llm_pipeline_budget.py  test_llm_telemetry.py  test_mathtex_interpreter.py  test_mcp_resources.py  test_mcp_schemas.py  test_mcp_server.py  test_mcp_tools.py  (+14 more)
tests/fixtures/: arxiv_sample.atom  fake_llm_client.py  scripted_prover.py
