[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kalinov-bridge"
version = "0.1.0"
description = "Benchmark harness: LLM-generated proofs verified by Lean 4 (early scaffold)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Bart Rosa", email = "contact@bartrosa.dev" }]
keywords = ["lean4", "llm", "benchmark", "formal-verification"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "gherkin-official>=29.0",
    "python-ulid>=2.0",
    "pyyaml>=6.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
gemini = ["google-genai>=0.3"]
# All named LLM SDKs (CI / local dev with `uv sync --extra all-llm`)
all-llm = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=0.3",
]

[project.scripts]
kalinov = "kalinov.cli:main"
kalinov-bridge = "kalinov_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/bartrosa/kalinov-bridge"
Repository = "https://github.com/bartrosa/kalinov-bridge"
Issues = "https://github.com/bartrosa/kalinov-bridge/issues"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=0.3",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kalinov", "src/kalinov_bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["experiments", "provers/lean/runtime/.lake"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = ["-q", "-m", "not lean"]
markers = [
    "lean: requires elan/lake and built provers/lean/runtime (see CI lean-prover job)",
]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
packages = ["kalinov", "kalinov_bridge"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

